# ErisPulse

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  README.zh-Hant.md  README.zh-TW.md  STYLE_GUIDE.md  config.toml  docker-compose.yml  docker-entrypoint.sh  main.py  packages.json  pyproject.toml  pytest.ini  test.py  update_api_docs.py
.github/: PULL_REQUEST_TEMPLATE.md  repository.yml
.github/.translate_cache/: README.en.cache  README.en.md.cache  README.md.en.cache  README.md.zh-TW.cache  README.zh-TW.cache  README.zh-TW.md.cache  bug-tracker.md.en.cache  bug-tracker.md.zh-TW.cache  quick-start.md.en.cache  quick-start.md.zh-TW.cache  terminology.md.en.cache  terminology.md.zh-TW.cache
.github/ISSUE_TEMPLATE/: adapter-submit.yml  bug_report.md  cli-submit.yml  feature_request.md  module-submit.yml  question.md
.github/config/: notify.json  notify_emails.json
.github/scripts/: update_packages.py
.github/tools/: generate-type-stubs.py  merge_md.py  update-api-docs.py
.github/workflows/: auto-tag-release.yml  auto-update-docs.yml  auto-update-packages.yml  auto-update-type-stubs.yml  code-quality-check.yml  develop-notification.yml  docker-publish.yml  is-new-issue.yml  is-new-pr.yml  pypi-publish.yml  python-publish.yml  send-email.yml  send-mail-notify.yml  update-api-docs.yml  update-packages.yml
.worker/: worker.js
ErisPulse/: __init__.py  __main__.py  adapter.py  db.py  errors.py  logger.py  mods.py  raiserr.py  util.py
devs/: main.py  search_pypi.py  test.py  test_ai.py  test_cmd.py  test_event_wrapper.py  test_event_wrapper_extended.py  test_imports.py  test_mail.py  test_telegram.py  test_worker.py
docs/: ADAPTERS.md  AI-Module-Generation.md  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  Conversion-Standard​.md  DEVELOPMENT.md  EVENT_MAPPING.md  LazyLoading.md  ORIGIN.md  PlatformFeatures.md  README.md  REFERENCE.md  UseCore.md  bug-tracker.md  move2pypi.md  quick-start.md  translate-workflow.md
docs-new/: README.md
docs-new/advanced/: README.md  lifecycle.md
docs-new/ai-support/: README.md
docs-new/api-reference/: README.md  core-modules.md
docs-new/developer-guide/: README.md
docs-new/getting-started/: README.md  basic-concepts.md  first-bot.md  (+2 more)
gitc/: cd_branch.sh  commit.sh  create_branch.sh  create_pr.sh  merge_dev.sh
stubs/: README.md  ide-configuration.md
tests/: README.md  __init__.py  conftest.py
(+845 files in other folders)
