[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ErisPulse"
version = "2.4.0"
description = "ErisPulse 是一个模块化、可扩展的异步 Python SDK 框架，主要用于构建高效、可维护的机器人应用程序。"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "ErisDev", email = "erisdev@88.com" }
]

maintainers = [
    { name = "艾莉丝·格雷拉特(WSu2059)", email = "wsu2059@qq.com" }
]

keywords = [
    "async",
    "bot",
    "sdk",
    "framework",
    "robot",
    "onebot",
    "telegram",
    "extensible",
    "modular",
    "asyncio"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
    "Typing :: Typed"
]

dependencies = [
    "pip>=23.0",  # 显式声明，防止部分情况下cli报错 | 绝对！！！不要删除这个依赖项
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "watchdog>=4.0.0",
    "toml>=0.10.2",
    "fastapi>=0.116.1",
    "hypercorn>=0.14.0",
    "packaging>=25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "pyclean>=3.6.0",
    "ruff>=0.1.7",
]

[project.scripts]
ep-init = "ErisPulse.__init__:init_sync"
epsdk = "ErisPulse.__main__:main"
ep = "ErisPulse.__main__:main"
ep-cli = "ErisPulse.__main__:main"
epsdk-cli = "ErisPulse.__main__:main"

[tool.hatch]
project.root = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/ErisPulse"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/ErisPulse",
]

[tool.ruff]
target-version = "py310"

include = ["src/**/*.py"]

extend-exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "build",
    "dist"
]
